--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.stratuslab.pkgs.claudia</groupId>
@@ -166,11 +167,11 @@ grid certificates, and VOMS proxies.
 				<artifactId>claudia-commons</artifactId>
 				<version>0.1.4-SNAPSHOT</version>
 			</dependency>
-                        <dependency>
-                                <groupId>eu.stratuslab.pkgs.claudia</groupId>
-                                <artifactId>clotho</artifactId>
-                                <version>0.1.4-SNAPSHOT</version>
-                        </dependency>
+			<dependency>
+				<groupId>eu.stratuslab.pkgs.claudia</groupId>
+				<artifactId>clotho</artifactId>
+				<version>0.1.4-SNAPSHOT</version>
+			</dependency>
 
 			<dependency>
 				<groupId>javax.persistence</groupId>
@@ -268,6 +269,17 @@ grid certificates, and VOMS proxies.
 				<version>2.1.1</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-core</artifactId>
+				<version>5.1.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-httpclient</groupId>
+				<artifactId>commons-httpclient</artifactId>
+				<version>3.0</version>
+			</dependency>
 
 			<!-- OVF-dependencies; this should be changed -->
 			<dependency>
@@ -366,17 +378,17 @@ grid certificates, and VOMS proxies.
 				<artifactId>commons-betwixt</artifactId>
 				<version>0.8</version>
 			</dependency>
-		        <dependency>
-          		  <groupId>mysql</groupId>
-       			  <artifactId>mysql-connector-java</artifactId>
-        		  <version>5.1.3</version>
-     		        </dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.3</version>
+			</dependency>
 
-      			  <dependency>
-               		 <groupId>c3p0</groupId>
-            		 <artifactId>c3p0</artifactId>
-                	 <version>0.9.1.2</version>
-        		 </dependency>
+			<dependency>
+				<groupId>c3p0</groupId>
+				<artifactId>c3p0</artifactId>
+				<version>0.9.1.2</version>
+			</dependency>
 
 
 		</dependencies>
