--- a/reportclient/pom.xml
+++ b/reportclient/pom.xml
@@ -49,10 +49,6 @@
       <groupId>eu.stratuslab.pkgs.claudia</groupId>
 	  <artifactId>claudia-commons</artifactId>
     </dependency>
-      <dependency>
-      <groupId>eu.stratuslab.pkgs.claudia</groupId>
-          <artifactId>clotho</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>commons-logging</groupId>
@@ -140,6 +136,18 @@
       <artifactId>jta</artifactId>
     </dependency>
     	
+
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-core</artifactId>
+    </dependency>
+
+
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+    </dependency>
+    
   </dependencies>
 
   <build>
