--- a/reportclient/src/main/config/reportClient.properties
+++ b/reportclient/src/main/config/reportClient.properties
@@ -2,6 +2,9 @@
 TServer.url=http://127.0.01:8182
 #TServer.url=http://62.217.120.136:8182
 
+vmDiscoverDelay=180
+monitoringDelay=20
+			
 restPath=/vmi 
 restServerPort=1114
 restServerHost=localhost
