--- a/pom.xml
+++ b/pom.xml
@@ -400,22 +400,27 @@ grid certificates, and VOMS proxies.
 		</dependencies>
 	</dependencyManagement>
 
-	<distributionManagement>
-		<repository>
-			<id>stratuslab.releases</id>
-			<name>Releases</name>
-			<url>http://repo.stratuslab.eu:8081/content/repositories/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>stratuslab.snapshots</id>
-			<name>Snapshots</name>
-			<url>http://repo.stratuslab.eu:8081/content/repositories/snapshots/</url>
-		</snapshotRepository>
-		<site>
-			<id>hudson.webserver</id>
-			<url>scp://hudson.stratuslab.eu/var/www/claudia</url>
-		</site>
-	</distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>stratuslab.releases</id>
+      <name>Releases</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/${nexus.release.repository.name}</url>
+    </repository>
+    <snapshotRepository>
+      <id>stratuslab.snapshots</id>
+      <name>Snapshots</name>
+      <url>http://repo.stratuslab.eu:8081/content/repositories/${nexus.snapshot.repository.name}</url>
+    </snapshotRepository>
+    <site>
+      <id>hudson.webserver</id>
+      <url>scp://hudson.stratuslab.eu/var/www/one</url>
+    </site>
+  </distributionManagement>
+
+  <properties>
+    <nexus.release.repository.name>releases</nexus.release.repository.name>
+    <nexus.snapshot.repository.name>snapshots</nexus.snapshot.repository.name>
+  </properties>
 
 	<reporting>
 		<plugins>
