--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -53,6 +53,7 @@ SiteRoot=es.tid
 #NetworkRanges=[ Network:10.95.240.0; IP:10.95.240.6/10.95.240.7/10.95.240.8; Netmask:255.255.240.0; Gateway:10.95.240.1; DNS:10.95.240.1; Public:yes; ],\
 #		[ IP:192.168.0.0; Netmask:255.255.240.0; Gateway:192.168.1.1; DNS:192.168.1.1; Public:no; ]
 NetworkRanges=[ public ], [ private ]
+#MacEnabled=true to enable de mac usage, the NerworkMacList section must contain the same number of adresses as IPs specified in private network section.
 MacEnabled=true
 NetworkMacList=00:16:3e:d9:78:b6/00:16:3e:d9:78:b7/00:16:3e:d9:78:b8/00:16:3e:d9:78:b9/00:16:3e:d9:78:a4/00:16:3e:d9:78:a5/00:16:3e:d9:78:a6/00:16:3e:d9:78:a7
 #StaticIpList=62.217.120.184/62.217.120.185
