--- a/claudia/pom.xml
+++ b/claudia/pom.xml
@@ -12,12 +12,12 @@
 	<version>1.0-SNAPSHOT</version>
 	<url>http://claudia.morfeo-project.org</url>
 	<inceptionYear>2010</inceptionYear>
-
+<!--  
   <parent>
     <groupId>eu.stratuslab.pkgs.claudia</groupId>
     <artifactId>claudia-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-  </parent>
+  </parent>-->
 
 	<build>
 		<plugins>
@@ -90,14 +90,14 @@
 	</organization>
 
 	<modules>
-		<module>/ovf-manager</module>
+	<!--<module>/ovf-manager</module>
 <module>/claudia-commons</module>
 <module>/driver-clotho</module>
 <module>/driver-one</module>
 <module>/driver-one-mon</module>
 <module>/tcloud-server</module>
 <module>/claudia-client</module>
-<module>/configurator</module>
+<module>/configurator</module>  -->	
 <module>/clotho</module>
 
 
