--- a/claudia-client/pom.xml
+++ b/claudia-client/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.1.1</version>
 		</dependency>
+		        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 	</dependencies>
 
 
