--- a/claudia-client/src/main/config/claudiaClient.properties
+++ b/claudia-client/src/main/config/claudiaClient.properties
@@ -25,3 +25,10 @@ acd.port=3500
 claudia.environment.disk=/dev/sdc
 claudia.environment.folder=/mnt/environment
 
+# Auth properties
+claudia.auth=false
+claudia.proxy=https://localhost:8443
+claudia.certpath=/opt/claudia/extrafiles/user/
+claudia.cert=stratuslab-test-user.p12
+claudia.certtype=pkcs12
+
