--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -3,7 +3,7 @@ java.naming.factory.initial=org.apache.activemq.jndi.ActiveMQInitialContextFacto
 java.naming.provider.url=tcp://localhost:61616
 
 # Event Monitorization Rest Bus connection parameters
-RestListenerHost=localhost
+RestListenerHost=62.217.120.136
 RestListenerPort=1114
 
 # SMI Rest Server connection parameters
@@ -28,7 +28,7 @@ UndeployOnServerStop=false
 ActivateAcd=false
 
 # Multicast monitoring address
-MonitoringAddress= 229.229.0.1
+MonitoringAddress=62.217.120.136
 
 # WASUP address.
 WASUPActive=false
