--- a/reportclient/src/main/config/reportClient.properties
+++ b/reportclient/src/main/config/reportClient.properties
@@ -6,10 +6,10 @@ vmDiscoverDelay=180
 monitoringDelay=30
 
 # limit virtual machine to monitor by name (set to all to monitor all deployed virtual machines)
-#vmMonitor=all
+#vmMonName=all
 vmMonName=workernode.replicas.1
 # limit monitor by name (set to all to read information of every existent monitor)
-#Monitor=all
+#monitorName=all
 monitorName=cpus.1
 
 
