--- a/clotho-rpm/pom.xml
+++ b/clotho-rpm/pom.xml
@@ -132,6 +132,15 @@
 								</source>
 							</sources>
 						</mapping>
+						
+							<mapping>
+							<directory>${app.home}/extraFiles/</directory>
+							<sources>
+								<source>
+									<location>target/dependency/clotho/extraFiles</location>
+								</source>
+							</sources>
+						</mapping>
 
 						<mapping>
 							<directory>${app.home}/logs</directory>
@@ -145,9 +154,6 @@
 							<directory>${app.home}/ruleHome</directory>
 						</mapping>
 
-						<mapping>
-							<directory>${app.home}/extraFiles</directory>
-						</mapping>
 
 						<mapping>
 
