--- a/clotho-rpm/pom.xml
+++ b/clotho-rpm/pom.xml
@@ -4,14 +4,14 @@
 
 	<groupId>eu.stratuslab.pkgs.claudia</groupId>
 	<artifactId>clotho-rpm</artifactId>
-	<version>0.1.7-SNAPSHOT</version>
+	<version>0.1.6-SNAPSHOT</version>
 	<name>Clotho RPM Packaging</name>
 	<packaging>rpm</packaging>
 
 	<parent>
 		<groupId>eu.stratuslab.pkgs.claudia</groupId>
 		<artifactId>claudia-parent</artifactId>
-		<version>1.6-SNAPSHOT</version>
+		<version>1.5-SNAPSHOT</version>
 	</parent>
 
 	<repositories>
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>eu.stratuslab.pkgs.claudia</groupId>
 			<artifactId>clotho</artifactId>
-			<version>0.1.7-SNAPSHOT</version>
+			<version>0.1.6-SNAPSHOT</version>
 			<classifier>environment</classifier>
 			<type>zip</type>
 		</dependency>
@@ -135,6 +135,9 @@
 						
 							<mapping>
 							<directory>${app.home}/extraFiles/</directory>
+							<filemode>755</filemode>
+							<username>root</username>
+							<groupname>root</groupname>
 							<sources>
 								<source>
 									<location>target/dependency/clotho/extraFiles</location>
