--- a/clotho-rpm/pom.xml
+++ b/clotho-rpm/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>eu.stratuslab.pkgs.claudia</groupId>
 	<artifactId>clotho-rpm</artifactId>
-	<version>0.1.6-SNAPSHOT</version>
+	<version>0.1.7-SNAPSHOT</version>
 	<name>Clotho RPM Packaging</name>
 	<packaging>rpm</packaging>
 
@@ -132,6 +132,18 @@
 								</source>
 							</sources>
 						</mapping>
+						
+							<mapping>
+							<directory>${app.home}/extraFiles/</directory>
+							<filemode>755</filemode>
+							<username>root</username>
+							<groupname>root</groupname>
+							<sources>
+								<source>
+									<location>target/dependency/clotho/extraFiles</location>
+								</source>
+							</sources>
+						</mapping>
 
 						<mapping>
 							<directory>${app.home}/logs</directory>
@@ -145,9 +157,6 @@
 							<directory>${app.home}/ruleHome</directory>
 						</mapping>
 
-						<mapping>
-							<directory>${app.home}/extraFiles</directory>
-						</mapping>
 
 						<mapping>
 
