--- a/clotho/src/main/config/sm.properties
+++ b/clotho/src/main/config/sm.properties
@@ -58,6 +58,7 @@ MacEnabled=true
 NetworkMacList=00:16:3e:d9:78:b6/00:16:3e:d9:78:b7/00:16:3e:d9:78:b8/00:16:3e:d9:78:b9/00:16:3e:d9:78:a4/00:16:3e:d9:78:a5/00:16:3e:d9:78:a6/00:16:3e:d9:78:a7/00:16:3e:d9:78:a8/00:16:3e:d9:78:a9/00:16:3e:d9:78:aa/00:16:3e:d9:78:ab
 #StaticIpList=62.217.120.184/62.217.120.185
 StaticIpList=62.217.120.166
+ipmanagement=true
 
 DomainName="LocalDomain"
 
