--- a/driver-flexiscale/pom.xml
+++ b/driver-flexiscale/pom.xml
@@ -94,156 +94,62 @@
 
 
    </dependencies>
-   <repositories>
-      <repository>
-         <id>maven-repository.dev.java.net</id>
-         <name>Java.net Repository for Maven 1</name>
-         <url>http://download.java.net/maven/1/</url>
-         <layout>legacy</layout>
-      </repository>
-      <repository>
-         <id>maven2-repository.dev.java.net</id>
-         <name>Java.net Repository for Maven 2</name>
-         <url>http://download.java.net/maven/2/</url>
-      </repository>
-<repository>
-       <id>claudia.repo</id>
-       <name>Claudia snapshot repository</name>
-       <url>http://ci-cpr01.hi.inet/nexus/content/groups/public-snapshots/</url>
-    </repository>
+    <build>
+    <plugins>
 
-      
-  <repository>
-      <id>fluxion</id>
-      <name>Fluxion repo</name>
-      <url>http://metagenome.ncl.ac.uk/fluxions/repo</url>
-    </repository>
-    
-    <repository>
-      <id>fluxion2</id>
-      <name>Fluxion repo</name>
-      <url>http://maven.mse.jhu.edu/m2repository</url>
-    </repository>
-    
-    
-
-
-   </repositories>  
-   <pluginRepositories>
-      <pluginRepository>
-         <id>maven2-repository.dev.java.net</id>
-         <url>http://download.java.net/maven/2/</url>
-      </pluginRepository>
-   </pluginRepositories>  
-   <build>
-      <plugins>
-      	<plugin>
-	   	<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jar-plugin</artifactId>
-		<executions>
-			<execution>
-				<id>make-a-jar</id>
-				<phase>compile</phase>
-				<goals>
-					<goal>jar</goal>
-				</goals>
-			</execution>
-		</executions>
+	<plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+	  <artifactId>maven-resources-plugin</artifactId>
+	  <configuration>
+	    <encoding>UTF-8</encoding>
+	  </configuration>
 	</plugin>
-	<!--<plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.6</version>
-            <configuration>
-        <charset>UTF-8</charset>
-        <docencoding>UTF-8</docencoding>
-        <docfilessubdirs>true</docfilessubdirs>
-        <links>
-            <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-        </links>
-        <show>protected</show>
-        <source>1.5</source>
-        <executions>
-				<execution>
-					<id>attach-javadocs</id>
-					<goals>
-						<goal>jar</goal>
-					</goals>
-				</execution>
-			</executions>
-     
-    </configuration>
 
+ <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-deploy-plugin</artifactId>
+   </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+
+     <!-- <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2-beta-5</version>
+        <configuration>
+          <descriptors>
+            <descriptor>src/main/assembly/src.xml</descriptor>
+          </descriptors>
+          <descriptorRefs>
+            <descriptorRef>project</descriptorRef>
+          </descriptorRefs>
+        </configuration>
       </plugin>-->
-    <!--    <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jaxws-maven-plugin</artifactId>
-            <version>1.9</version>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>wsimport</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <wsdlDirectory>${basedir}/src/main/resources/wsdl/</wsdlDirectory>
-               <sourceDestDir>${basedir}/src/main/java</sourceDestDir>
-               <wsdlFiles>
-               		<wsdlFile>flexiscale.wsdl</wsdlFile>
-               </wsdlFiles>
-               <wsdlLocation>flexiscale.wsdl</wsdlLocation> 
-               <keep>true</keep>
-               <verbose>true</verbose>
-               <xnocompile>true</xnocompile>
-            </configuration>
-            <dependencies>
-               <dependency>
-                  <groupId>javax.jws</groupId>
-                  <artifactId>jsr181-api</artifactId>
-                  <version>1.0-MR1</version>
-               </dependency>
-            </dependencies>
-         </plugin>-->
-   <!--      <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jaxb2-maven-plugin</artifactId>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>xjc</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <schemaDirectory>${basedir}/src/main/resources/schemas/</schemaDirectory>
-               <outputDirectory>${basedir}/src/main/java</outputDirectory>
-               <clearOutputDir>false</clearOutputDir>
-               <extension>true</extension>
-            </configuration>
-         </plugin> -->  
-         <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-               <source>1.5</source>
-               <target>1.5</target>
-            </configuration>
-         </plugin>
-         
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>tomcat-maven-plugin</artifactId>
-            <configuration>
-                <port>8083</port>
-            </configuration>
-        </plugin>
-        <plugin>
+
+<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptors>
             <descriptor>src/main/assembly/src.xml</descriptor>
-           
+            
           </descriptors>
 
 
@@ -262,14 +168,15 @@
 				</executions>
 
 			</plugin>
-      </plugins>
-      <resources>
-          <resource>
-            <directory>src/main/resources</directory>
-            <filtering>true</filtering>
-          </resource>
-      </resources>
-   </build>
+
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+      </plugin>
+
+    </plugins>
+  </build>
 
   
 
