--- a/claudiaHelloWorld/pom.xml
+++ b/claudiaHelloWorld/pom.xml
@@ -40,6 +40,11 @@
                 <artifactId>commons-httpclient</artifactId>
                 <version>3.0</version>
             </dependency>
+  <dependency> 
+    	<groupId>commons-io</groupId> 
+    	<artifactId>commons-io</artifactId> 
+    	<version>2.0.1</version> 
+    </dependency> 
 	</dependencies>
 	<distributionManagement>
 		<repository>
